# omnirealm-demo

./: .gitignore  DEMO-SCRIPTS.md  EXPORT-PROJECTS-GUIDE.md  GUIDE-PRESENTATION-PROF.md  PRESENTATION-PROJETS.md  README.md  create-demo-repo.sh  package.json
omni-fit/: .env.example  .env.test  .eslintrc.json  .gitignore  .lighthouserc.json  .lintstagedrc.json  .prettierignore  .prettierrc  ARCHITECTURE.md  BUG-REPORT-2024-08-16.md  BUG-REPORT.md  CLEANUP-REPORT.md  DEPLOYMENT.md  Dockerfile  FINAL-OPTIMIZATION-REPORT.md  MIGRATION-NOTICE-PORTS.md  MIGRATION_MODAL_SHADCN.md  OMNIFIT-IMPROVEMENT-PLAN.md  PLAN-AMELIORATION-QUALITE.md  PRD.md  RAPPORT-QUALITE-ANALYSE.md  RAPPORT-SUPERVISEUR-QUALITE.md  README.md  ROADMAP.md  SESSION-RECAP-23-07-2025.md  SPEC-OMNIFIT-PREMIUM.md  STRIPE-WEBHOOK-EVENTS.md  TEST-PAYMENT-FLOW.md  TESTING-GUIDE.md  TESTING-STRATEGY.md  UI-UX-ANALYSIS-REPORT.md  USER-JOURNEY-ANALYSIS-2025-08-16.md  capacitor.config.ts  capacitor.md  clean-browser.md  coolify-compose.yml  deploy-instructions.md  dev.db  docker-compose.yml  index.html  (+22 more)
omni-music-pro/: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  Makefile  PYDANTIC_V2_MIGRATION_SUMMARY.md  RAPPORT_TECHNIQUE.md  README.md  coverage.xml  pyproject.toml  run_omnimusic.bat  run_omnimusic.sh
omni-music-pro/src/omni_music/: __init__.py  __main__.py
omni-music-pro/src/omni_music/application/: __init__.py  use_cases.py
omni-music-pro/src/omni_music/domain/: __init__.py  exceptions.py  models.py  repositories.py  services.py  validators.py
omni-music-pro/src/omni_music/infrastructure/: __init__.py  audio_converter.py  cache.py  config.py  container.py  logging.py  music_sources.py  repositories.py  retry.py
omni-music-pro/src/omni_music/presentation/: __init__.py  fixed_gui.py  gui.py  modern_gui.py
omni-scan/: .env.example  .gitignore  ACCESSIBILITY-IMPLEMENTATION-GUIDE.md  AUDIT-OMNISCAN-2025-08-09.md  CACHE-IMPLEMENTATION-GUIDE.md  CODE-REVIEW-RAPPORT-COMPLET.md  DEPLOYMENT-OMNISCAN.md  DEPLOYMENT.md  LIGHTWEIGHT-OCR-INTEGRATION-REPORT.md  MIGRATION-NOTICE-PORTS.md  OCR-UPGRADE-PLAN.md  OPTIMISATIONS-RAPPORT.md  RAPPORT-CODE-MORT.md  (+23 more)
(+849 files in other folders)
